<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.elmos</groupId>
    <artifactId>elmos-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>ELMOS</name>

    <modules>
        <module>modules/domain</module>
        <module>modules/evidence</module>
        <module>contracts/engine-api</module>
        <module>modules/evidence-bound-engine</module>
        <module>modules/application</module>
        <module>modules/workflow</module>
        <module>modules/identity</module>
        <module>modules/object-storage</module>
        <module>modules/scm</module>
        <module>modules/snapshot</module>
        <module>modules/cas</module>
        <module>modules/secret</module>
        <module>modules/network-policy</module>
        <module>modules/workspace</module>
        <module>modules/health-check</module>
        <module>modules/intake</module>
        <module>modules/semantic</module>
        <module>modules/uir</module>
        <module>modules/skeleton</module>
        <module>modules/lowering</module>
        <module>modules/dependency-migration</module>
        <module>modules/framework-migration</module>
        <module>modules/composite-modernization</module>
        <module>modules/portfolio-scale</module>
        <module>modules/advanced-verification</module>
        <module>modules/developer-workflow</module>
        <module>modules/extension-marketplace</module>
        <module>modules/source-control-workspace-governance</module>
        <module>modules/secure-execution-plane</module>
        <module>modules/evidence-assurance-fabric</module>
        <module>modules/continuous-authorization</module>
        <module>modules/production-runtime</module>
        <module>engines/database-data-engine</module>
        <module>engines/infrastructure-engine</module>
        <module>engines/security-compliance-engine</module>
        <module>engines/test-quality-engine</module>
        <module>engines/mainframe-engine</module>
        <module>engines/enterprise-integration-engine</module>
        <module>engines/enterprise-suite-engine</module>
        <module>engines/software-delivery-platform-engine</module>
        <module>engines/ai-platform-engine</module>
        <module>engines/edge-iot-industrial-engine</module>
        <module>engines/operations-sre-itsm-engine</module>
        <module>engines/enterprise-architecture-engine</module>
        <module>modules/planning</module>
        <module>modules/recipe-governance</module>
        <module>modules/repair-orchestration</module>
        <module>modules/behavior-equivalence</module>
        <module>modules/production-hardening</module>
        <module>modules/production-cutover</module>
        <module>modules/enterprise-platform</module>
        <module>modules/commercial-loop</module>
        <module>modules/ecosystem-growth</module>
        <module>modules/company-series</module>
        <module>modules/product-roadmap-governance</module>
        <module>modules/migration-pack-certification</module>
        <module>modules/modernization-proof-loop</module>
        <module>modules/validation</module>
        <module>modules/delivery</module>
        <module>modules/enterprise-governance</module>
        <module>modules/commercial-operations</module>
        <module>modules/persistence</module>
        <module>modules/security</module>
        <module>modules/integrations</module>
        <module>recipes/elmos-java-recipes</module>
        <module>apps/java-engine-worker</module>
        <module>apps/java-engine-transformer</module>
        <module>apps/java-engine-verifier</module>
        <module>apps/control-plane</module>
        <module>apps/production-runtime-control-plane</module>
        <module>apps/production-runtime-worker</module>
        <module>apps/runner-agent</module>
        <module>apps/workspace-service</module>
        <module>apps/egress-proxy</module>
        <module>apps/agent-gateway</module>
        <module>apps/enterprise-control</module>
        <module>apps/commercial-api</module>
        <module>apps/elmosctl</module>
        <module>apps/modernization-proof-worker</module>
        <module>modules/architecture-tests</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <spring-boot.version>4.1.1</spring-boot.version>
        <archunit.version>1.4.1</archunit.version>
        <rewrite-spring.version>6.35.0</rewrite-spring.version>
        <testcontainers.version>1.21.2</testcontainers.version>
        <maven.compiler.version>3.14.0</maven.compiler.version>
        <maven.surefire.version>3.5.3</maven.surefire.version>
        <maven.enforcer.version>3.6.1</maven.enforcer.version>
        <commons-compress.version>1.27.1</commons-compress.version>
        <zstd-jni.version>1.5.7-11</zstd-jni.version>
        <docker-java.version>3.7.1</docker-java.version>
        <!-- Overridable per environment: mvn test -Ddocker.api.version=1.51 -->
        <docker.api.version>1.44</docker.api.version>
        <jgit.version>7.7.0.202606012155-r</jgit.version>
        <tomlj.version>1.1.1</tomlj.version>
        <sqlite-jdbc.version>3.53.2.1</sqlite-jdbc.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId><artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version><type>pom</type><scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId><artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version><type>pom</type><scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId><artifactId>commons-compress</artifactId><version>${commons-compress.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.luben</groupId><artifactId>zstd-jni</artifactId><version>${zstd-jni.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.docker-java</groupId><artifactId>docker-java-core</artifactId><version>${docker-java.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.docker-java</groupId><artifactId>docker-java-transport-httpclient5</artifactId><version>${docker-java.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jgit</groupId><artifactId>org.eclipse.jgit</artifactId><version>${jgit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.tomlj</groupId><artifactId>tomlj</artifactId><version>${tomlj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.xerial</groupId><artifactId>sqlite-jdbc</artifactId><version>${sqlite-jdbc.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <configuration><release>${java.version}</release><parameters>true</parameters></configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.version}</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                        <systemPropertyVariables>
                            <!--
                              docker-java negotiates Docker API 1.32 by default. Docker Engine 26
                              raised the minimum supported API version to 1.40, so on any modern
                              engine every container-backed test fails its environment probe.

                              That failure is invisible: Testcontainers' disabledWithoutDocker
                              catches the exception and reports the class as Skipped, and the
                              build still says SUCCESS. The whole suite can stop exercising
                              PostgreSQL without one line of output saying so.

                              1.44 is comfortably inside the window every supported engine
                              serves (Docker 24 through 29 all accept it) while staying old
                              enough not to require a very recent daemon.
                            -->
                            <api.version>${docker.api.version}</api.version>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId><artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId></plugin>
            <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-surefire-plugin</artifactId></plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId><artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.version}</version>
                <executions><execution><id>baseline</id><goals><goal>enforce</goal></goals><configuration><rules>
                    <requireJavaVersion><version>[21,22)</version></requireJavaVersion>
                    <requireMavenVersion><version>[3.9,)</version></requireMavenVersion>
                </rules></configuration></execution></executions>
            </plugin>
        </plugins>
    </build>
</project>
